[WIP] feat: 음악 성향 계산 로직 추가
- 충분한 데이터가 없어 테스트를 거치지 못했습니다.